# stencil-maker

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: CHANGELOG.md
src/stencil_maker/: __init__.py  __main__.py  core.py  server.py
src/stencil_maker/static/: main.js  style.css
src/stencil_maker/templates/: index.html  result-fragment.html
