[project]
name = "stencil-maker"
version = "0.1.0"
description = "Generate an image for a text stencil"
authors = [
    { name = "mamg22", email = "45301823+mamg22@users.noreply.github.com" }
]
dependencies = [
    "pillow>=10.3.0",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics",
]

[project.optional-dependencies]
server = [
    "flask>=3.0.3",
]


[project.scripts]
stencil-maker = "stencil_maker.__main__:main"
stencil-server = "stencil_maker.server:app.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stencil_maker"]
